5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1756_1183.log
== TEST (2019-05-27 14:39:18) 
-- CODE:
from numpy import *
n1 = array(eval(input("digite um numero: ")))
v = ones(n1,dtype=int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:42:42) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:16:55) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(ni[c]>0):
		a=a+1
	c=c+1
c=0
v=arange[a]
while(c<size[a]):
	if(ni[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- EXECUTION TIME:
0.60531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 9, in <module>
    if(ni[c]>0):
NameError: name 'ni' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:16:58) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(ni[c]>0):
		a=a+1
	c=c+1
c=0
v=arange[a]
while(c<size[a]):
	if(ni[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:23) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange[a]
while(c<size[a]):
	if(ni[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:50) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange[n1]
while(c<size[a]):
	if(ni[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:28) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange[n1]
while(c<size[n1]):
	if(n1[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:19:08) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange(a)
while(c<size[n1]):
	if(n1[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- EXECUTION TIME:
0.455138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 14, in <module>
    while(c<size[n1]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:19:12) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange(a)
while(c<size[n1]):
	if(n1[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:19:12) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange(a)
while(c<size[n1]):
	if(n1[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- EXECUTION TIME:
0.512735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 14, in <module>
    while(c<size[n1]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:20:47) 
-- CODE:
from numpy import *

n1 = array(eval(input("digite um numero: ")))
a=0 #quant. de elemento nao negativo
b=0 #copilador
c=0 #controlar a posicao de entrada do vetor

while(c<size(n1)):
	if(n1[c]>0):
		a=a+1
	c=c+1
c=0
v=arange(a)
while(c<size(n1)):
	if(n1[c]>0):
		v[b]=n1[c]
		b=b+1
	c=c+1
print(v)
	
	

-- EXECUTION TIME:
0.488219
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
